--- a/schlattahotellet/index.html
+++ b/schlattahotellet/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Schlattahotellet</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
+        <header>
+            <nav>
+                <div class="logo">
+                    <h1>SH</h1>
+                    <h2>Schlättahottelet</h2>
+                </div>
+                
+                <div>
+                    <ul role="list">
+                        <li><a href="#">Hem</a></li>
+                        <li><a href="#">Boka</a></li>
+                        <li><a href="#">Resturang</a></li>
+                        <li><a href="#">Upplevelser</a></li>
+                        <li><a href="#">Rum</a></li>
+                        <li><a href="#">Erbjudanden</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <main>
 
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
