--- a/schlattahotellet/index.html
+++ b/schlattahotellet/index.html
@@ -12,10 +12,11 @@
     <body>
         <header>
             <nav>
-                <div class="logo">
+                <a href="index.html"><div class="logo">
                     <h1>SH</h1>
                     <h2>Schlättahottelet</h2>
                 </div>
+            </a>
                 
                 <div>
                     <ul role="list">
@@ -30,7 +31,58 @@
             </nav>
         </header>
         <main>
-
+            <div class="hero">
+                <div>
+                    <div>
+                        <h1>Schlättahotellet - Ett femstjärnigt hotell i Vara</h1>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. In placeat pariatur hic fugit, officia natus doloribus laborum veniam nam alias excepturi deleniti sunt velit impedit libero error officiis minus atque?. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit velit ea officia, cupiditate cum porro sed ut in adipisci hic exercitationem, nemo quo et aperiam maiores obcaecati ducimus rerum minima!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="cards-container">
+                <div class="card">
+                  <a href="#">
+                    <img src="./img/camille-brodard-VxAwTeiqDao-unsplash(1).jpg" alt="Spa">
+                    <h2>Spa</h2>
+                    <div class="underline"></div>
+                  </a>
+                </div>
+                <div class="card">
+                  <a href="#">
+                    <img src="your-image-url-here" alt="Restaurang">
+                    <h2>Restaurang</h2>
+                    <div class="underline"></div>
+                  </a>
+                </div>
+                <div class="card">
+                  <a href="#">
+                    <img src="./img/christopher-jolly-GqbU78bdJFM-unsplash(1).jpg" alt="Rum">
+                    <h2>Rum</h2>
+                    <div class="underline"></div>
+                  </a>
+                </div>
+                <div class="card">
+                  <a href="#">
+                    <img src="./img/jason-abrams-EN3AVjMPZWA-unsplash(1).jpg" alt="Upplevelser">
+                    <h2>Upplevelser</h2>
+                    <div class="underline"></div>
+                  </a>
+                </div>
+                <div class="card">
+                  <a href="#">
+                    <img src="your-image-url-here" alt="Gym">
+                    <h2>Gym</h2>
+                    <div class="underline"></div>
+                  </a>
+                </div>
+                <div class="card">
+                  <a href="#">
+                    <img src="your-image-url-here" alt="Galleri">
+                    <h2>Galleri</h2>
+                    <div class="underline"></div>
+                  </a>
+                </div>
+              </div>
         </main>
         <footer>
 
