--- a/schlattahotellet/index.html
+++ b/schlattahotellet/index.html
@@ -11,6 +11,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     </head>
     <body>
         <header>
@@ -105,7 +106,7 @@
               <div class="button-container">
                 <a href="Bokanu.html" class="button">Boka nu</a>
               </div>
-              <section class="paket-erbjudanden">
+            <section class="paket-erbjudanden">
               <div class="paket">
                 <h1>Paket & Erbjudanden</h1>
                 <h2>Här finner du det bästa erbjudanet för din vistelse i Vara!</h2>
@@ -137,21 +138,22 @@
                   </a>
                   </div>
               </div>  
+            </section>
         </main>
         <footer class="footer">
           <div class="container">
            <div class="row">
              <div class="footer-col">
-               <h4>company</h4>
+               <h4>Om oss</h4>
                <ul>
-                 <li><a href="#">about us</a></li>
-                 <li><a href="#">our services</a></li>
+                 <li><a href="#">Våra tjänster</a></li>
+                 <li><a href="#">Sekretesspolicy</a></li>
                  <li><a href="#">privacy policy</a></li>
                  <li><a href="#">affiliate program</a></li>
                </ul>
              </div>
              <div class="footer-col">
-               <h4>get help</h4>
+               <h4>Boka nu</h4>
                <ul>
                  <li><a href="#">FAQ</a></li>
                  <li><a href="#">shipping</a></li>
@@ -161,16 +163,16 @@
                </ul>
              </div>
              <div class="footer-col">
-               <h4>online shop</h4>
+               <h4>Kontakta oss</h4>
                <ul>
-                 <li><a href="#">watch</a></li>
+                 <li><a href="#">schlattahotellet@gmail.com</a></li>
                  <li><a href="#">bag</a></li>
                  <li><a href="#">shoes</a></li>
                  <li><a href="#">dress</a></li>
                </ul>
              </div>
              <div class="footer-col">
-               <h4>follow us</h4>
+               <h4>Medier</h4>
                <div class="social-links">
                  <a href="#"><i class="fab fa-facebook-f"></i></a>
                  <a href="#"><i class="fab fa-twitter"></i></a>
