--- a/schlattahotellet/index.html
+++ b/schlattahotellet/index.html
@@ -25,7 +25,7 @@
                 <div>
                     <ul role="list">
                         <li><a href="#">Hem</a></li>
-                        <li><a href="#">Boka</a></li>
+                        <li><a href="Bokanu.html">Boka</a></li>
                         <li><a href="#">Resturang</a></li>
                         <li><a href="#">Upplevelser</a></li>
                         <li><a href="#">Rum</a></li>
@@ -61,8 +61,6 @@
                     <h2>Restaurang</h2>
                     <div class="underline"></div>
                    </div> 
-                   
-                    
                   </a>
                 </div>
                 <div class="card">
@@ -138,6 +136,9 @@
                   </a>
                   </div>
               </div>  
+              <div class="se-alla-erbjudanden-button-container">
+                <button class="se-alla-erbjudanden">Se Alla Erbjudanden</button>
+              </div>
             </section>
         </main>
         <footer class="footer">
@@ -148,27 +149,22 @@
                <ul>
                  <li><a href="#">Våra tjänster</a></li>
                  <li><a href="#">Sekretesspolicy</a></li>
-                 <li><a href="#">privacy policy</a></li>
-                 <li><a href="#">affiliate program</a></li>
                </ul>
              </div>
              <div class="footer-col">
                <h4>Boka nu</h4>
                <ul>
-                 <li><a href="#">FAQ</a></li>
-                 <li><a href="#">shipping</a></li>
-                 <li><a href="#">returns</a></li>
-                 <li><a href="#">order status</a></li>
-                 <li><a href="#">payment options</a></li>
+                 <li><a href="#">Öppetider</a></li>
+                 <li><a href="#">Rum</a></li>
+                 <li><a href="#">Paket och Erbjudanden</a></li>
                </ul>
              </div>
              <div class="footer-col">
                <h4>Kontakta oss</h4>
                <ul>
                  <li><a href="#">schlattahotellet@gmail.com</a></li>
-                 <li><a href="#">bag</a></li>
-                 <li><a href="#">shoes</a></li>
-                 <li><a href="#">dress</a></li>
+                 <li><a href="#">Kundtjänst</a></li>
+                 <li><a href="#">+46 771 793 336</a></li>
                </ul>
              </div>
              <div class="footer-col">
