--- a/schlattahotellet/html/upplevelser.html
+++ b/schlattahotellet/html/upplevelser.html
@@ -6,8 +6,8 @@
         <title>Schlattahotellet</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/reset.css">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     <body>
         <header>
             <nav>
-                <a href="index.html"><div class="logo">
+                <a href="../index.html"><div class="logo">
                     <h1>SH</h1>
                     <h2>Schlättahottelet</h2>
                 </div>
@@ -24,12 +24,12 @@
                 
                 <div>
                     <ul role="list">
-                        <li><a href="index.html" class="active">Hem</a></li>
-                        <li><a href="./html/bokanu.html">Boka</a></li>
-                        <li><a href="./html/restaruang.html">Resturang</a></li>
-                        <li><a href="./html/upplevelser.html">Upplevelser</a></li>
-                        <li><a href="./html/rum.html">Rum</a></li>
-                        <li><a href="./html/erbjudanden.html">Erbjudanden</a></li>
+                        <li><a href="../index.html">Hem</a></li>
+                        <li><a href="../html/Bokanu.html">Boka</a></li>
+                        <li><a href="../html/restaruang.html">Resturang</a></li>
+                        <li><a href="../html/upplevelser.html" class="active">Upplevelser</a></li>
+                        <li><a href="../html/rum.html">Rum</a></li>
+                        <li><a href="../html/erbjudanden.html">Erbjudanden</a></li>
                     </ul>
                 </div>
             </nav>
@@ -46,7 +46,7 @@
             <div class="cards-container">
                 <div class="card">
                   <a href="#">
-                    <img src="./img/camille-brodard-VxAwTeiqDao-unsplash(1).jpg" alt="Spa">
+                    <img src="../img/camille-brodard-VxAwTeiqDao-unsplash(1).jpg" alt="Spa">
                     <div class="card-heading">
                       <h2>Spa</h2>
                       <div class="underline"></div>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="card">
                   <a href="#">
-                    <img src="./img/jay-wennington-N_Y88TWmGwA-unsplash(1).jpg" alt="Restaurang">
+                    <img src="../img/jay-wennington-N_Y88TWmGwA-unsplash(1).jpg" alt="Restaurang">
                    <div class="card-heading">
                     <h2>Restaurang</h2>
                     <div class="underline"></div>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="card">
                   <a href="#">
-                    <img src="./img/christopher-jolly-GqbU78bdJFM-unsplash(1).jpg" alt="Rum">
+                    <img src="../img/christopher-jolly-GqbU78bdJFM-unsplash(1).jpg" alt="Rum">
                   <div class="card-heading">
                     <h2>Rum</h2>
                     <div class="underline"></div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="card">
                   <a href="#">
-                    <img src="./img/jason-abrams-EN3AVjMPZWA-unsplash(1).jpg" alt="Upplevelser">
+                    <img src="../img/jason-abrams-EN3AVjMPZWA-unsplash(1).jpg" alt="Upplevelser">
                    <div class="card-heading">
                     <h2>Upplevelser</h2>
                     <div class="underline"></div>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="card">
                   <a href="#">
-                    <img src="./img/humphrey-muleba-LOA2mTj1vhc-unsplash(1).jpg" alt="Gym">
+                    <img src="../img/humphrey-muleba-LOA2mTj1vhc-unsplash(1).jpg" alt="Gym">
                    <div class="card-heading">
                     <h2>Gym</h2>
                     <div class="underline"></div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="card">
                   <a href="#">
-                    <img src="./img/raphael-biscaldi-7RQf2X6aXXI-unsplash(1).jpg" alt="Pool">
+                    <img src="../img/raphael-biscaldi-7RQf2X6aXXI-unsplash(1).jpg" alt="Pool">
                    <div class="card-heading">
                     <h2>Pool</h2>
                     <div class="underline"></div>
@@ -102,7 +102,7 @@
                 </div>
               </div>
               <div class="button-container">
-                <a href="./html/bokanu.html" class="button">Boka nu</a>
+                <a href="Bokanu.html" class="button">Boka nu</a>
               </div>
             <section class="paket-erbjudanden">
               <div class="paket">
@@ -112,7 +112,7 @@
               <div class="paket-container">
                 <div class="paket-card">
                   <a href="#">
-                    <img src="./img/oliur-1JNk998-g70-unsplash(1).jpg" alt="Medlemserbjudanden">
+                    <img src="../img/oliur-1JNk998-g70-unsplash(1).jpg" alt="Medlemserbjudanden">
                     <div class="card-heading">
                       <h2>Medlems erbjudanden</h2>
                     </div>  
@@ -121,7 +121,7 @@
                 </div>
                 <div class="paket-card">
                   <a href="#">
-                    <img src="./img/annie-spratt-43o1KVbOWXA-unsplash(1).jpg" alt="Påsk">
+                    <img src="../img/annie-spratt-43o1KVbOWXA-unsplash(1).jpg" alt="Påsk">
                    <div class="card-heading">
                     <h2>Påsk</h2>
                    </div> 
@@ -129,7 +129,7 @@
                 </div>
                 <div class="paket-card">
                   <a href="#">
-                    <img src="./img/brooke-lark-pXEsx3kRuNc-unsplash(1).jpg" alt="Alla hjärtans dag">
+                    <img src="../img/brooke-lark-pXEsx3kRuNc-unsplash(1).jpg" alt="Alla hjärtans dag">
                   <div class="card-heading">
                     <h2>Alla hjärtans dag</h2>
                   </div>
