--- a/schlattahotellet/html/bokanu.html
+++ b/schlattahotellet/html/bokanu.html
@@ -37,6 +37,7 @@
         <main>
           <section class="booking-section">
             <div class="background-image"></div>
+            <div class="rumbilder"></div>
             <div class="booking-form">
           <div class="booking-form">
             <form>
@@ -69,7 +70,7 @@
                 <option value="4">4</option>
                 <option value="5">5</option>
               </select>
-              <button type="submit" id="check-availability">Check Availability</button>
+              <button type="submit" id="check-availability">Boka nu</button>
             </form>
           </div>
         </div>
