--- a/schlattahotellet/html/bokanu.html
+++ b/schlattahotellet/html/bokanu.html
@@ -41,22 +41,22 @@
 <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade">
+  <div class="mySlides fade" style="display:block">
     <div class="numbertext">1 / 3</div>
     <img src="../img/christopher-jolly-GqbU78bdJFM-unsplash(1).jpg">
-    <div class="text">Caption Text</div>
+    <div class="text">Rum 1</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
     <img src="../img/sidekix-media-7jlVQPX8PLE-unsplash(1).jpg">
-    <div class="text">Caption Two</div>
+    <div class="text">Rum 2</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="img3.jpg">
-    <div class="text">Caption Three</div>
+    <img src="../img/christopher-jolly-GqbU78bdJFM-unsplash(1).jpg">
+    <div class="text">Rum 3</div>
   </div>
 
   <!-- Next and previous buttons -->
@@ -80,13 +80,11 @@
               <input type="date" id="arrival" name="arrival" required>
               <label for="departure">Avresa:</label>
               <input type="date" id="departure" name="departure" required>
-              <label for="rooms">Antal rum:</label>
+              <label for="rooms">Rum:</label>
               <select id="rooms" name="rooms" required>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
               </select>
               <label for="adults">Vuxna:</label>
               <select id="adults" name="adults" required>
