--- a/schlattahotellet/index.html
+++ b/schlattahotellet/index.html
@@ -16,12 +16,13 @@
     <body>
         <header>
             <nav>
-                <a href="index.html"><div class="logo">
+              <a href="index.html"><div class="logo">
                     <h1>SH</h1>
                     <h2>Schlättahottelet</h2>
                 </div>
-            </a>
-                
+                </a>
+                <input type="checkbox" id="menu-toggle" class="menu-toggle">
+                <label for="menu-toggle" class="menu-icon">&#9776;</label>
                 <div>
                     <ul role="list">
                         <li><a href="index.html" class="active">Hem</a></li>
@@ -39,7 +40,12 @@
                 <div>
                     <div>
                         <h1>Schlättahotellet - Ett femstjärnigt hotell i Vara</h1>
-                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. In placeat pariatur hic fugit, officia natus doloribus laborum veniam nam alias excepturi deleniti sunt velit impedit libero error officiis minus atque?. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit velit ea officia, cupiditate cum porro sed ut in adipisci hic exercitationem, nemo quo et aperiam maiores obcaecati ducimus rerum minima!</p>
+                        <p> Schlättahotellet är ett mysigt hotell i Vara. Här finns bekväma rum, en trevlig restaurang och möjlighet till träning och avkoppling i fitnessanläggningen och spa-avdelningen. Hotellet erbjuder sina gäster en avkopplande och trevlig vistelse i den vackra staden Vara.
+
+
+
+
+</p>
                     </div>
                 </div>
             </div>
